Install prettier with gitignore

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/adlomo23/JavaScript-foundations-challenge-1/issues"
   },
-  "homepage": "https://github.com/adlomo23/JavaScript-foundations-challenge-1#readme"
+  "homepage": "https://github.com/adlomo23/JavaScript-foundations-challenge-1#readme",
+  "devDependencies": {
+    "prettier": "3.0.3"
+  }
 }
